--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,29 @@
+*{
+    box-sizing: border-box;
+}
+html, body{
+    margin: 0;
+    padding: 0;
+    -ms-word-break: break-word;
+    word-break: break-word;
+    width: 100%;
+    min-height: 100%;
+    max-height: 100%;
+    height: 100%;
+    -webkit-text-size-adjust: 100%;
+    -ms-text-size-adjust: 100%;
+}
 html {
+    margin: 0;
+    padding: 0;
     font-size: 1rem;
     line-height: 1.375rem;
+    color: #333;
+    font-weight: 400;
+    font-family: UHCSans,Helvetica,Arial,sans-serif;
 }
 body {
     font-size: 1rem;
     line-height: 1.375rem;
+    font-weight: 500;
 }
