--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,7 @@ body {
     font-size: 1rem;
     line-height: 1.375rem;
     font-weight: 500;
+    overflow-x: hidden;
 }
 h1 {
     font-size: 2.25rem;
