--- a/initial-style.css
+++ b/initial-style.css
@@ -5,6 +5,7 @@
 .left-0{left:0}
 .right-0{right:0}
 @font-face{font-family:'UHCSans';src:url("UHCSans-Regular.woff");font-weight:400;font-style:normal}
+@font-face{font-family:'UHCSans';src:url("UHCSans-Bold.woff");font-weight:700;font-style:normal}
 .aem-Grid{display:block;width:100%;max-width:calc(100% + 20px)}
 .aem-Grid::before,.aem-Grid::after{display:table;content:' '}
 .aem-Grid::after{clear:both}
